--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-streamlit
-pandas
-numpy
-rdkit
-xgboost
-plotly
-matplotlib
-streamlit-lottie
-requests
+streamlit>=1.30
+pandas>=2.0
+numpy>=1.24
+rdkit-pypi>=2022.9.5
+xgboost>=1.7
+plotly>=5.18
+requests>=2.31
